--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,5 +10,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install
         run: npm ci
+      - name: Tests
+        run: npm run test
       - name: Tests e2e
         run: npm run test:e2e:ci
